# owm-rs

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
src/owm/: constants.rs  mod.rs
src/owm/geocoding/: api.rs  mod.rs  structures.rs
src/owm/weather/: api.rs  structures.rs
src/tests/: geocoding.rs  mod.rs  setup.rs  utils.rs  weather.rs
src/utils/: convert.rs
