[package]
name = "owm-rs"
version = "1.0.13"
edition = "2021"
authors = ["Oscuro87"]
repository = "https://github.com/Oscuro87/owm-rs"
description = "Wrapper around the free offer of the OpenWeatherMap API."
license = "MIT"

[features]
utils = []

[[example]]
name = "basic"
required-features = ["utils"]

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }

[dev-dependencies]
dotenvy = "0.15.7"
