[package]
name = "owm-rs"
version = "1.0.18"
edition = "2021"
authors = ["Oscuro87"]
repository = "https://github.com/Oscuro87/owm-rs"
description = "Wrapper around the free offer of the OpenWeatherMap API."
license = "MIT"

[features]
utils = []

[[example]]
name = "basic"
required-features = ["utils"]

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
dotenvy = "0.15.7"
